# final-project-llm-in-cybersecurity

./: .gitignore  README.md  conversations.py  data.ipynb  embedding.py  finetuning-1b.ipynb  finetuning.ipynb  llm.py  main.py  phishing_detection.py  phishing_email.txt  phishing_mode.py  pyproject.toml  qa_mode.py  safe_email.txt  search.py  settings.py  utils.py
notebooks/: agent-performance.ipynb  data.ipynb  embeddings.ipynb  google-search.ipynb  post-finetuning-analysis.ipynb  separate_merged_emails.ipynb
results/: performance_summary.csv  phishing_detection_results.csv  qa_detailed_evaluation.csv  qa_performance_results.csv
